src/css/sections/banner.css
@media only screen and (min-width: 1280px) {
  .banner .container {
    padding: 0 64px;
  }
}

.banner-inner {
  padding: 40px 20px;
  border-radius: 16px;
  background: linear-gradient(
    85deg,
    var(--green) 2.25%,
    var(--accent-green) 131.25%
  );
  overflow: hidden;
}

@media only screen and (min-width: 768px) {
  .banner-inner {
    border-radius: 30px;
    padding: 64px 32px;
  }
}

@media only screen and (min-width: 1280px) {
  .banner-inner {
    padding: 64px 64px;
  }
}

.banner-title {
  margin: 0 0 40px;
  max-width: 295px;
  font-weight: 700;
  font-size: 38px;
  line-height: 1.05;
  color: var(--white);
  text-align: left;
}

@media only screen and (min-width: 768px) {
  .banner-title {
    max-width: 640px;
    margin-bottom: 32px;
    font-size: 60px;
    line-height: 1.17;
  }
}

@media only screen and (min-width: 1280px) {
  .banner-title {
    max-width: 776px;
    margin-bottom: 72px;
  }
}

.banner-subtitle {
  margin: 0 0 16px;
  font-weight: 700;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: -0.02em;
  color: var(--black);
  text-align: left;
}

@media only screen and (min-width: 768px) {
  .banner-subtitle {
    font-size: 40px;
    line-height: 1.2;
    letter-spacing: -0.02em;
  }
}

@media only screen and (min-width: 1280px) {
  .banner-subtitle {
    margin-bottom: 42px;
  }
}

.banner-list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.banner-list-item:not(:last-child) {
  margin-bottom: 16px;
}

.banner-list-item {
  display: flex;
  gap: 8px;
  align-items: center;
}

@media only screen and (min-width: 768px) {
  .banner-list-item {
    gap: 16px;
  }
}

.banner-badge {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: var(--green);
}

@media only screen and (min-width: 768px) {
  .banner-badge {
    width: 28px;
    height: 28px;
  }
}

.banner-icon {
  display: block;
  width: 12px;
  height: 12px;
}

@media only screen and (min-width: 768px) {
  .banner-icon {
    width: 20px;
    height: 20px;
  }
}

.banner-text {
  text-align: left;
  color: var(--black);
  font-weight: 700;
  font-size: 14px;
  line-height: 1.43;
  letter-spacing: -0.02em;
}

@media only screen and (max-width: 767px) {
  .banner-text {
    flex: 1;
    min-width: 0;
  }
}

@media only screen and (min-width: 768px) {
  .banner-text {
    font-size: 20px;
    line-height: 1.2;
    letter-spacing: -0.02em;
  }
}

@media only screen and (min-width: 768px) {
  .banner-advantages {
    display: flex;
    flex-direction: column;
    align-self: start;
    margin-right: 187px;
  }
}

@media only screen and (min-width: 1280px) {
  .banner-advantages {
    margin-right: 92px;
  }
}

@media only screen and (min-width: 768px) {
  .banner-card-content {
    display: flex;
    align-items: center;
  }
}

.banner-cta {
  margin-top: 20px;
}

@media only screen and (max-width: 767px) {
  .banner-cta {
    width: 100%;
    min-width: 0;
    padding-right: 24px;
    padding-left: 24px;
    white-space: normal;
  }
}

@media only screen and (min-width: 768px) {
  .banner-cta {
    margin-top: 32px;
    width: 306px;
    min-width: 306px;
    padding-right: 64px;
    padding-left: 64px;
    white-space: nowrap;
  }
}

@media only screen and (min-width: 1280px) {
  .banner-cta {
    margin-top: 40px;
  }
}

.banner-card {
  position: absolute;
  border-radius: 16px;
}

@media only screen and (min-width: 768px) {
  .banner-card {
    border-radius: 30px;
  }
}

.banner-card--first {
  left: 50%;
  top: 5%;
  width: 295px;
  height: 408px;
  background-color: var(--light-green);
  transform: translateX(-50%) rotate(-9deg);
}

@media only screen and (max-width: 767px) {
  .banner-card--first {
    width: 100%;
    max-width: 295px;
  }
}

@media only screen and (min-width: 768px) {
  .banner-card--first {
    left: 50%;
    top: 10%;
    width: 668px;
    height: 500px;
    background-color: rgba(255, 255, 255, 0.5);
    transform: translateX(-50%) rotate(10.65deg);
  }
}

@media only screen and (min-width: 1280px) {
  .banner-card--first {
    top: 15%;
    width: 1011px;
    height: 402px;
    background-color: rgba(255, 255, 255, 0.5);
    transform: translateX(-50%) rotate(11deg);
  }
}

.banner-card--second {
  left: 50%;
  top: 5%;
  width: 295px;
  height: 408px;
  background-color: rgba(255, 255, 255, 0.5);
  transform: translateX(-50%) rotate(11deg);
}

@media only screen and (max-width: 767px) {
  .banner-card--second {
    width: 100%;
    max-width: 295px;
  }
}

@media only screen and (min-width: 768px) {
  .banner-card--second {
    left: 50%;
    top: 10%;
    width: 668px;
    height: 500px;
    background-color: var(--light-green);
    transform: translateX(-50%) rotate(-9.86deg);
  }
}

@media only screen and (min-width: 1280px) {
  .banner-card--second {
    top: 10%;
    width: 1050px;
    height: 463px;
    background-color: var(--light-green);
    transform: translateX(-50%) rotate(-8deg);
  }
}

.banner-card--third {
  left: 50%;
  top: 25px;
  width: 295px;
  padding: 40px 20px;
  background-color: var(--white);
  transform: translateX(-50%);
  z-index: 2;
}

@media only screen and (max-width: 767px) {
  .banner-card--third {
    width: 100%;
    max-width: 295px;
  }
}

@media only screen and (min-width: 768px) {
  .banner-card--third {
    left: 38px;
    top: 51px;
    width: 668px;
    height: 500px;
    padding: 64px 32px;
    transform: none;
  }
}

@media only screen and (min-width: 1280px) {
  .banner-card--third {
    left: 50px;
    top: 61px;
    width: 1024px;
    height: 471px;
    padding: 65px 64px;
  }
}

.banner-cards {
  position: relative;
  left: -35px;
  width: 367px;
  height: 456px;
}

@media only screen and (max-width: 767px) {
  .banner-cards {
    left: 0;
    width: 100%;
    max-width: 367px;
    margin: 0 auto;
  }
}

@media only screen and (min-width: 768px) {
  .banner-cards {
    left: -52px;
    width: 754px;
    height: 614px;
    margin-top: 32px;
  }
}

@media only screen and (min-width: 1280px) {
  .banner-cards {
    left: -50px;
    width: 1104px;
    height: 604px;
    margin-top: 0;
  }
}

.banner-picture {
  display: none;
}

@media only screen and (min-width: 768px) {
  .banner-picture {
    display: block;
    position: absolute;
    top: 174px;
    right: -49px;
    width: 214px;
    height: auto;
  }
}

@media only screen and (min-width: 1280px) {
  .banner-picture {
    top: 129px;
    right: 0;
  }
}

.banner-image {
  display: block;
  width: 100%;
  height: auto;
}

